--- a/CSS/mywebdesign.css
+++ b/CSS/mywebdesign.css
@@ -23,7 +23,7 @@ header {
 .logo {
 	height: 70px;
 	width: 70px;
-	text-align: ce
+	
 }
 
 .lined {
@@ -39,6 +39,7 @@ header {
 	display: flex;
 	flex-flow: wrap;
 	justify-content: space-around;
+	margin-top: 50px;
 }
 
 .box figure {
